--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -21,7 +21,7 @@
             <div class="col-sm-12">
                 <header>
                     <!-- NavBar -->
-                    <nav class="navbar navbar-expand-sm bg-dark"><!--navbar-dark-->
+                    <nav class="navbar navbar-expand-sm bg-secondary"><!--navbar-dark-->
                         <!-- Brand -->
                         <a class="navbar-brand" th:href="@{/home}">
                             <img class="rounded-circle" th:src="@{/images/logo.png}" style="width:32px;height:32px;">
@@ -34,7 +34,7 @@
                         <div class="collapse navbar-collapse" id="#collapsibleNavbar">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/home}">Home</a>
+                                    <a class="nav-link text-white font-italic" th:href="@{/home}">FirstMarket</a>
                                 </li>
                                 <!--
                                 <li class="nav-item dropdown">
@@ -69,18 +69,18 @@
                                 </li>
                             </ul>
                             <ul class="navbar-nav">
+                                <!--user greeting-->
+                                <li class="navbar-text" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
+                                    <small class="text-white">Hi, <span th:text="${firstName}"/>!</small>
+                                </li>
                                 <!--cart-->
                                 <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link" th:href="@{/user/cart}" data-toggle="tooltip" title="View Cart">
                                         <span class="fa-stack has-badge mx-2" id="cart" th:data-count="${cartSize}">
                                             <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
-                                            <i class="fa fa-shopping-cart fa-stack-2x info-over-dark"></i>
+                                            <i class="fa fa-shopping-cart fa-stack-2x info-over-secondary"></i>
                                         </span>
                                     </a>
-                                </li>
-                                <!--user greeting-->
-                                <li class="navbar-text" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
-                                    <small class="text-info font-weight-bold">Hi, <span th:text="${firstName}"/>!</small>
                                 </li>
                                 <!--admin greeting-->
                                 <li class="navbar-text" sec:authorize="hasRole('ADMIN')">
