--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,27 @@
         <div class="container-fluid bg-light">
             <!-- layout::header -->
             <div th:replace="fragments/layout::header"></div>
+            <!-- main categories -->
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- NavBar -->
+                    <nav class="navbar navbar-expand-sm p-0 m-0" style="background-color:#e9ecef">
+                        <!-- Toggler/collapsibe Button -->
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- Navbar links -->
+                        <div class="collapse navbar-collapse" id="#collapsibleNavbar">
+                            <ul class="navbar-nav">
+                                <li class="nav-item" th:each="cat : ${mainCategories}">
+                                    <!--<a class="nav-link text-dark font-weight-bold" th:href="@{/books/search/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>-->
+                                    <a class="btn btn-outline-info btn-sm border-0 rounded-0" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
             <!-- jumbotron -->
             <div class="row">
                 <div class="col-sm-12 bg-white">
@@ -30,7 +51,7 @@
                             <div class="col-sm-4">
                                 <form class="needs-validation" novalidate th:action="@{/books}" method="GET" action="#">
                                     <div class="input-group mt-5">
-                                        <input class="form-control form-control-sm" type="text" name="q" placeholder="title, ISBN, author, publisher..." th:pattern="${TEXT_QUERY}">
+                                        <input class="form-control form-control-sm" type="text" name="q" placeholder="title, ISBN, author, publisher..." required th:pattern="${TEXT_QUERY}">
                                         <div class="input-group-append">
                                             <button class="btn btn-info btn-sm" type="submit">
                                                 <i class="fas fa-search"></i>
@@ -45,27 +66,7 @@
                     </div>
                 </div>
             </div>
-            <!-- main categories -->
-            <div class="row">
-                <div class="col-sm-12">
-                    <!-- NavBar -->
-                    <nav class="navbar navbar-expand-sm p-0 m-0" style="background-color:#e9ecef">
-                        <!-- Toggler/collapsibe Button -->
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <!-- Navbar links -->
-                        <div class="collapse navbar-collapse" id="#collapsibleNavbar">
-                            <ul class="navbar-nav">
-                                <li class="nav-item" th:each="cat : ${mainCategories}">
-                                    <!--<a class="nav-link text-dark font-weight-bold" th:href="@{/books/search/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>-->
-                                    <a class="nav-link text-dark font-weight-bold" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
+
             <!-- books -->
             <div class="row mt-4">
                 <div class="col-sm-1"></div>
@@ -74,7 +75,7 @@
                         <div class="card col-xs-12 col-sm-4 col-lg-2 m-2 p-0" th:each="book : ${pageOfBooks}">
                             <a th:href="@{/book/{id}(id=${book.id})}"><img class="card-image card-img-top img-responsive" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
                             <div class="card-body">
-                                <a th:href="@{/book/{id}(id=${book.id})}"><p class="card-title text-responsive font-weight-bold" th:text="${book.title}">title</p></a>
+                                <a th:href="@{/book/{id}(id=${book.id})}"><p class="card-title text-responsive text-info font-weight-bold" th:text="${book.title}">title</p></a>
                                 <div class="card-text">
                                     <small th:each="author : ${book.authors}">
                                         <span th:text="${author.lastName}">lastName</span>,
