--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -12,10 +12,12 @@
                 <!-- search query -->
                 <div class="col-sm-3">
                     <div class="input-group">
-                        <input class="form-control form-control-sm" type="text" placeholder="title, ISBN, author, publisher...">
+                        <input class="form-control form-control-sm" id="queryTextBox" type="text" placeholder="title, ISBN, author, publisher..." th:pattern="${TEXT_QUERY}">
                         <div class="input-group-append">
-                            <!--<button class="btn btn-info btn-sm" type="submit">-->
-                            <button class="btn btn-info btn-sm">
+                            <button class="btn btn-secondary btn-sm" id="clearTextBoxButton" style="display: none">
+                                <i class="fas fa-times"></i>
+                            </button>
+                            <button class="btn btn-info btn-sm" id="searchTextBoxButton">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
@@ -36,7 +38,8 @@
                     <button class="accordion" id="categoryAcc">Category</button>
                     <div class="panel">
                         <div class="my-3" th:each="cat : ${childrenCategories}">
-                            <a class="text-dark" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
+                            <a class="categoryLink text-dark" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
+                            <!-- th:id="'ca-' + ${cat.id}" -->
                         </div>
                     </div>
                     <button class="accordion" id="priceAcc">Price</button>
@@ -77,7 +80,7 @@
                                     <a th:href="@{/book/{id}(id=${book.id})}"><img class="img-fluid my-3" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
                                 </div>
                                 <div class="col-sm-6 bg-white">
-                                    <a th:href="@{/book/{id}(id=${book.id})}"><p class="text-responsive font-weight-bold mt-3" th:text="${book.title}">title</p></a>
+                                    <a th:href="@{/book/{id}(id=${book.id})}"><p class="text-responsive text-info font-weight-bold mt-3" th:text="${book.title}">title</p></a>
                                     <p><strong><span th:text="${book.authorsString}"></span></strong></p>
                                     <p><small>Published by </small><strong><span th:text="${book.publisher.name}"></span></strong></p>
                                     <p class="my-0"><small><span th:text="${book.language}"></span></small></p>
