added backend search functionality by text query criteria. Text query is compared with book title, ISBN, publisher name, author first name and author last name

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container-fluid">
             <div th:replace="fragments/layout::header"></div>
-            <div th:replace="fragments/layout::jumbotron"></div>
+            <!--<div th:replace="fragments/layout::jumbotron"></div>-->
             <div class="row my-2">
                 <div class="col-sm-1 bg-white"></div>
                 <div class="col-sm-3 bg-white">
