-removed title links underline -fixed broken addBookToCart buttons on book.html and searchResults.html

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -37,18 +37,19 @@
                 </div>
                 <div class="col-sm-2 bg-white" >
                     <div sec:authorize="!hasRole('ADMIN')">
-                        <a class="btn btn-outline-primary btn-xl align-center" th:href="@{/user/addBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Add to Cart">
-                            Add to Cart<i class="fas fa-cart-plus fa-3x"></i>
-                        </a>
+                        <button class="addBook btn btn-outline-info btn-lg align-center" th:id="'ab-' + ${book.id}" data-toggle="tooltip" title="Add to Cart">
+                            Add to Cart<i class="fas fa-cart-plus ml-2"></i>
+                        </button>
                     </div>
                     <div sec:authorize="hasRole('ADMIN')">
-                        <a class="btn btn-outline-primary btn-xl align-center" th:href="@{/admin/editBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Edit Book">
+                        <a class="btn btn-outline-info btn-xl align-center" th:href="@{/admin/editBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Edit Book">
                             Edit Book<i class="fas fa-pen fa-2x ml-2"></i>
                         </a>
                     </div>
                 </div>
             </div>
             <div th:replace="fragments/layout::footer"></div>
+            <script th:src="@{/js/ajaxCart.js}"></script>
         </div>
     </body>
 </html>
