-added fixed footer to login.html -added info-color to login.html

--- a/src/main/resources/static/css/fmstyle.css
+++ b/src/main/resources/static/css/fmstyle.css
@@ -98,3 +98,14 @@
     background: #6c757d; /* BS4 secondary */
 }
 
+
+/******************************* fixed-footer */
+
+.fixed-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+/********************************/
